# caloriehero

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  architecture.md  docker-compose.yml  package.json  pnpm-lock.yaml  railway.toml  tsconfig.base.json  turbo.json
backend/: Dockerfile  alembic.ini  promote_admin.py  pyproject.toml  seed.py  start.py
backend/alembic/: env.py
backend/alembic/versions/: 01029f89a837_initial_schema.py  0b061bb3f9ef_add_body_stats_to_user_profile.py  55c9f1d75a78_add_multi_day_meal_plan_model.py  a2b3c4d5e6f7_add_macro_pricing.py  b3c4d5e6f7g8_add_plan_item_extras.py  c4d5e6f7g8h9_add_nutritional_benefits.py
backend/app/: config.py  database.py  dependencies.py  main.py  middleware.py  redis.py
backend/app/engine/: __init__.py  constants.py  daily_planner.py  filters.py  multi_day_generator.py  optimizer.py  per_meal_matcher.py  scoring.py  slot_allocator.py  types.py  variant_generator.py
backend/app/models/: __init__.py  delivery.py  meal.py  meal_plan.py  order.py  payment.py  settings.py  subscription.py  user.py
backend/app/providers/: payment_provider.py  poster_provider.py
backend/app/realtime/: redis_pubsub.py  sse_manager.py
backend/app/routes/: admin.py  auth.py  delivery.py  matching.py  meals.py  orders.py  settings.py  sse.py  subscriptions.py  users.py  webhooks.py
backend/app/schemas/: auth.py  common.py  delivery.py  (+6 more)
backend/tests/: conftest.py  test_admin.py  test_body_stats.py  test_health.py  test_pricing.py  test_rate_limit.py  test_settings.py  test_variant_generator.py
(+224 files in other folders)
